--- a/css/design.css
+++ b/css/design.css
@@ -30,6 +30,7 @@ body{
     .page-header .student-search input{
       border-radius: 5px;
       border: 1px solid #eaeaea;
+      margin-right: 7px;
       padding: 8px 15px;
       font-size: 14px;
     }
@@ -99,9 +100,10 @@ body{
   margin: 40px 0 0 0;
   text-align: center;
 }
- 
+
   .pagination li{
     display: inline;
+    padding: 0 2.5px;
   }
 
     .pagination li a{
