--- a/css/design.css
+++ b/css/design.css
@@ -119,3 +119,53 @@ body{
       background-color: #4ba6c3;
       color: #fff;
     }
+/* Animations - - - - - - - - - */
+/* Fade In */
+@-webkit-keyframes fadeIn {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
+}
+@-moz-keyframes fadeIn {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
+}
+@-o-keyframes fadeIn {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
+}
+@keyframes fadeIn {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
+}
+/* Fade Out */
+@-webkit-keyframes fadeOut {
+  0%    { opacity: 1; }
+  100%  { opacity: 0; }
+}
+@-moz-keyframes fadeOut {
+  0%    { opacity: 1; }
+  100%  { opacity: 0; }
+}
+@-o-keyframes fadeOut {
+  0%    { opacity: 1; }
+  100%  { opacity: 0; }
+}
+@keyframes fadeOut {
+  0%    { opacity: 1; }
+  100%  { opacity: 0; }
+}
+/* Animation Classes */
+.fade-in, .fade-out {
+  -webkit-animation: 1s ease-in both;
+  -moz-animation:    1s ease-in both;
+  -o-animation:      1s ease-in both;
+  animation:         1s ease-in both;
+}
+
+.fade-in {
+  animation-name: fadeIn;
+}
+
+.fade-out {
+  animation-name: fadeOut;
+}
