--- a/css/design.css
+++ b/css/design.css
@@ -155,17 +155,17 @@ body{
   100%  { opacity: 0; }
 }
 /* Animation Classes */
-.fade-in, .fade-out {
+.fadeOut, .fadeIn {
   -webkit-animation: 1s ease-in both;
   -moz-animation:    1s ease-in both;
   -o-animation:      1s ease-in both;
   animation:         1s ease-in both;
 }
 
-.fade-in {
+.fadeIn {
   animation-name: fadeIn;
 }
 
-.fade-out {
+.fadeOut {
   animation-name: fadeOut;
 }
